# anlp-project

./: .cache  .dockerignore  .gitignore  README.md  pyproject.toml  text.tex
anlp_project/: __main__.py  api.py  spotify.py
anlp_project/model/: __main__.py  dataset.py  model.py  old_dataset.py
anlp_project/website/: api.py  inference.py  spotify.py  test.py
frontend/: login.html  recent.html  style.css  suggest.html  vite.config.ts
frontend/src/pages/login/: App.vue  main.ts
frontend/src/pages/recent/: App.vue
frontend/src/pages/suggest/: App.vue
