[tool.poetry]
name = "anlp-project"
version = "0.1.0"
description = ""
authors = ["Mattia2700 <mattia2700franzin+dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.20.0"
spotipy = "^2.24.0"
lyricsgenius = "^3.0.1"
fastapi = "^0.111.0"
transformers = "^4.41.2"
lightning = "^2.3.0"
torch = "2.2.1"
wandb = "^0.17.1"
numpy = "==1.*"

[tool.poetry.scripts]
main = "anlp_project.model.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.9"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
